k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocr-backend
  namespace: ocr-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocr-backend
  template:
    metadata:
      labels:
        app: ocr-backend
    spec:
      containers:
        - name: ocr-backend
          image: maryyyl/ocr-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
